fix(esp): revert

--- a/apps/site/pages/es/index.mdx
+++ b/apps/site/pages/es/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: Ejecuta JavaScript en cualquier parte
 layout: home
 ---
 
@@ -7,10 +7,11 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Ejecuta JavaScript en cualquier parte</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® es un entorno de ejecución de JavaScript multiplataforma,
+    de código abierto y gratuito que permite a los desarrolladores crear servidores,
+    aplicaciones web, herramientas de línea de comando y scripts.
 
   </div>
 
@@ -18,11 +19,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Descargar Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Descarga Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="Descarga un instalador de Node.js para tu plataforma">1</sup> con soporte a largo plazo.
+            Node.js también puede ser instalado a través de <Link href="/download">gestores de versiones</Link>.
           </small>
         </>
       )}
@@ -31,9 +32,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          ¿Quieres nuevas funciones más pronto?
+          Consigue<b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Downloads a Node.js installer for your current platform">1</sup> en vez.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +129,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+Aprenda más sobre lo que Node.js puede ofrecer con nuestros [Materiales de aprendizaje](/learn).
+
 </section>
