--- a/apps/site/pages/fr/index.mdx
+++ b/apps/site/pages/fr/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: Exécuter du JavaScript partout
 layout: home
 ---
 
@@ -7,10 +7,9 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Exécuter du JavaScript partout</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® est un environnement d'exécution JavaScript gratuit, open-source et multiplateforme qui permet aux développeurs de créer des serveurs, des applications web, des outils en ligne de commande et des scripts.
 
   </div>
 
@@ -18,11 +17,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Télécharger Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Téléchargements Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="Downloads a Node.js installer for your current platform">1</sup> avec un support à long terme.
+            Node.js peut également être installé via <Link href="/download">le gestionnaire de versions</Link>.
           </small>
         </>
       )}
@@ -31,9 +30,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          Vous voulez de nouvelles fonctionnalités plus tôt ?
+          Obtenez <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Downloads a Node.js installer for your current platform">1</sup> à la place.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +127,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+Apprenez-en plus sur ce que Node.js est capable d'offrir avec notre [Matériel d'apprentissage](/learn).
+
 </section>
