--- a/apps/site/pages/uk/index.mdx
+++ b/apps/site/pages/uk/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: Запускайте JavaScript будь‑де
 layout: home
 ---
 
@@ -7,10 +7,10 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Запускайте JavaScript будь‑де</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® — це безплатне, кросплатформне середовище виконання JavaScript із відкритим кодом,
+    яке дозволяє розробникам створювати сервери, вебзастосунки, інструменти командного рядка та скрипти.
 
   </div>
 
@@ -18,11 +18,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Завантажити Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Завантажує Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="Downloads a Node.js installer for your current platform">1</sup> із довгостроковою підтримкою.
+            Node.js також можна встановити через <Link href="/download">менеджери версій</Link>.
           </small>
         </>
       )}
@@ -31,9 +31,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          Хочете отримати нові функції швидше?
+          Завантажте <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Downloads a Node.js installer for your current platform">1</sup>.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +128,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+Дізнайтеся більше про можливості Node.js із [нашими навчальними матеріалами](/learn).
+
 </section>
