--- a/apps/site/pages/fa/index.mdx
+++ b/apps/site/pages/fa/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: اجرا جاوااسکریپت در همه جا
 layout: home
 ---
 
@@ -7,10 +7,11 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">اجرا جاوااسکریپت در همه جا</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js یک محیط اجرای جاوااسکریپت متن‌باز، رایگان و چندسکویی است
+    که به توسعه دهندگان اجازه می‌دهد تا سرورها، وب اپلیکیشن‌ها
+    ابزارهای خط فرمان و اسکریپت‌ها را ایجاد کنند.
 
   </div>
 
@@ -18,11 +19,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>دانلود Node.js (نسخه پایدار)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            دانلود Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="دانلود نصب‌کننده Node.js برای پلتفرم فعلی شما">1</sup> با پشتیبانی بلندمدت.
+            Node.js همچنین از طریق <Link href="/download/package-manager">package managers</Link> نیز قابل نصب است.
           </small>
         </>
       )}
@@ -31,9 +32,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          می‌خواهید زودتر از ویژگی‌های جدید برخوردار شوید؟
+          به‌جای آن <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="دانلود نصب‌کننده Node.js برای پلتفرم فعلی شما">1</sup> را دریافت کنید.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +129,5 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
-</section>
+  با [مطالب آموزشی](/learn) ما، بیشتر در مورد اینکه Node.js چه امکاناتی را ارائه می دهد بیاموزید.
+  </section>
