--- a/apps/site/pages/id/index.mdx
+++ b/apps/site/pages/id/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: Jalankan JavaScript Di Mana Saja
 layout: home
 ---
 
@@ -7,10 +7,11 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Jalankan JavaScript Di Mana Saja</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® adalah lingkungan runtime JavaScript gratis dan sumber terbuka yang
+    lintas platform, yang memungkinkan pengembang membuat server, aplikasi web,
+    alat baris perintah, dan skrip.
 
   </div>
 
@@ -18,11 +19,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Unduh Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Unduhan Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="Mengunduh penginstal Node.js untuk platform Anda saat ini">1</sup> dengan dukungan jangka panjang (LTS).
+            Node.js juga dapat diinstal melalui <Link href="/download">manajer paket</Link>.
           </small>
         </>
       )}
@@ -31,9 +32,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          Ingin fitur baru lebih cepat?
+          Dapatkan <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Downloads a Node.js installer for your current platform">1</sup> sebagai gantinya.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +129,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+Pelajari lebih lanjut tentang apa yang bisa ditawarkan Node.js melalui [Bahan Pembelajaran](/learn) kami.
+
 </section>
