--- a/apps/site/pages/pt/index.mdx
+++ b/apps/site/pages/pt/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: Executar a JavaScript em Toda Parte
 layout: home
 ---
 
@@ -7,10 +7,11 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Executar a JavaScript em Toda Parte</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® é um ambiente de execução de JavaScript multiplataforma,
+    de código-aberto e gratuita, que permite aos programadores criar servidores, aplicações
+    da Web, ferramentas de linha de comando e programas de automação de tarefas.
 
   </div>
 
@@ -18,11 +19,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Descarregar a Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Descarrega a Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="Downloads a Node.js installer for your current platform">1</sup> com suporte de longo prazo.
+            A Node.js também pode ser instalada por meio de <Link href="/download">gestores de versão</Link>.
           </small>
         </>
       )}
@@ -31,9 +32,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          Queremos novas funcionalidades mais cedo?
+          Podemos então obter a <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Descarrega um instalador da Node.js para a nossa plataforma atual">1</sup>.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +129,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+É possível saber que mais a Node.js consegue oferecer com os nossos [materiais de estudo](/learn).
+
 </section>
