--- a/apps/site/pages/tr/index.mdx
+++ b/apps/site/pages/tr/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: JavaScript'i Her Yerde Çalıştırın
 layout: home
 ---
 
@@ -7,10 +7,11 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">Her Yerde JavaScript Çalıştırın</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js®, ücretsiz, açık kaynaklı, çapraz platform JavaScript çalıştırma ortamıdır.
+    Geliştiricilere sunucular, web uygulamaları, komut satırı araçları ve betikler oluşturma
+    imkanı sağlar.
 
   </div>
 
@@ -18,11 +19,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>Node.js'i İndir (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            Node.js'i indir <b>{release.versionWithPrefix}</b>
+            <sup title="Mevcut platformunuz için bir Node.js yükleyicisi indirir">1</sup> uzun vadeli destek ile indirin.
+            Node.js ayrıca <Link href="/download/package-manager">paket yöneticileri</Link> aracılığıyla da kurulabilir.
           </small>
         </>
       )}
@@ -31,9 +32,15 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          Yeni özellikleri daha erken mi istiyorsunuz?{" "}
+          <b>
+            Node.js{" "}
+            <DownloadLink release={release}>
+              {release.versionWithPrefix}
+            </DownloadLink>
+          </b>{" "}
+          <sup title="Geçerli platformunuz için bir Node.js yükleyicisi indirir">1</sup>{" "}
+          alabilirsiniz.
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +135,5 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+  Node.js'in sunabileceklerini daha yakından keşfetmek için [Öğrenme materyallerimize](/learn) göz atın.
 </section>
