--- a/apps/site/pages/zh-tw/index.mdx
+++ b/apps/site/pages/zh-tw/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Run JavaScript Everywhere
+title: 隨時隨地執行 JavaScript
 layout: home
 ---
 
@@ -7,10 +7,9 @@ layout: home
   <WithBadgeGroup section="index" />
 
   <div>
-    <h1 className="special">Run JavaScript Everywhere</h1>
+    <h1 className="special">隨時隨地執行 JavaScript</h1>
 
-    Node.js® is a free, open-source, cross-platform JavaScript runtime environment
-    that lets developers create servers, web apps, command line tools and scripts.
+    Node.js® 是一款免費的跨平台開源 JavaScript 執行環境，供開發者建立伺服器、網頁應用程式、命令列工具與指令稿。
 
   </div>
 
@@ -18,11 +17,11 @@ layout: home
     <WithNodeRelease status={['LTS']}>
       {({ release }) => (
         <>
-          <DownloadButton release={release}>Download Node.js (LTS)</DownloadButton>
+          <DownloadButton release={release}>下載 Node.js (LTS)</DownloadButton>
           <small>
-            Downloads Node.js <b>{release.versionWithPrefix}</b>
-            <sup title="Downloads a Node.js installer for your current platform">1</sup> with long-term support.
-            Node.js can also be installed via <Link href="/download">version managers</Link>.
+            下載享有長期支援的 Node.js <b>{release.versionWithPrefix}</b>
+            <sup title="下載適用您的平台的 Node.js 安裝程式">1</sup>。
+            您也可以透過<Link href="/download">版本管理程式</Link>來安裝 Node.js。
           </small>
         </>
       )}
@@ -31,9 +30,9 @@ layout: home
     <WithNodeRelease status={['Current']}>
       {({ release }) => (
         <small>
-          Want new features sooner?
-          Get <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
-          <sup title="Downloads a Node.js installer for your current platform">1</sup> instead.
+          想要更快體驗新功能嗎？
+          那就下載 <b>Node.js <DownloadLink release={release}>{release.versionWithPrefix}</DownloadLink></b>
+          <sup title="Downloads a Node.js installer for your current platform">1</sup> 吧。
         </small>
       )}
     </WithNodeRelease>
@@ -128,5 +127,7 @@ layout: home
     ```
 
   </div>
-  Learn more what Node.js is able to offer with our [Learning materials](/learn).
+
+我們提供大量[學習資源](/learn)，探索 Node.js 的無限潛能。
+
 </section>
