add copy of CTA [TODO...extract into component if we are happy with direct copy]

--- a/apps/site/pages/en/eol.mdx
+++ b/apps/site/pages/en/eol.mdx
@@ -32,3 +32,15 @@ As part of the [OpenJS Ecosystem Sustainability Program](https://openjsf.org/par
 However, this should be viewed as a temporary solution—the goal should always be to upgrade to actively supported versions.
 
 ## Upgrade Today
+
+<div className="flex flex-col gap-2">
+  <Button kind="special" className="!hidden dark:!block" href="/download">Get Node.js®</Button>
+
+  <Button kind="primary" className="!block dark:!hidden" href="/download">Get Node.js®</Button>
+
+  <Button kind="secondary" className="!block" href="/blog/announcements/node-18-eol-support">
+    <span>Get security support</span>
+    <br />
+    <small className="!text-xs">for Node.js 18 and below</small>
+  </Button>
+</div>
