redirect links to proper locations per spec

--- a/apps/site/pages/en/eol.mdx
+++ b/apps/site/pages/en/eol.mdx
@@ -38,7 +38,7 @@ However, this should be viewed as a temporary solution—the goal should always 
 
   <Button kind="primary" className="!block dark:!hidden" href="/download">Get Node.js®</Button>
 
-  <Button kind="secondary" className="!block" href="/blog/announcements/node-18-eol-support">
+  <Button kind="secondary" className="!block" href="https://www.herodevs.com/support/node-nes?utm_source=NodeJS+&utm_medium=Link&utm_campaign=Nodejs_eol_support">
     <span>Get security support</span>
     <br />
     <small className="!text-xs">for Node.js 18 and below</small>
