--- a/apps/site/pages/en/index.mdx
+++ b/apps/site/pages/en/index.mdx
@@ -21,7 +21,7 @@ layout: home
 
       <Button kind="primary" className="!block dark:!hidden" href="/download">Get Node.js®</Button>
 
-      <Button kind="secondary" className="!block" href="/blog/announcements/node-18-eol-support">
+      <Button kind="secondary" className="!block" href="/eol#commercial-support">
         <span>Get security support</span>
         <br />
         <small className="!text-xs">for Node.js 18 and below</small>
